Bug fixes as of September 18, 2025 - Particles are cut off when they travel too far. - Calculation stops when particles reach too far. - Layout gets messed up when rotating the smartphone screen. - What is Theta?

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header {
    Layout
 ================================ */
 .container {
-
+  height: 83%;
   margin: 0.5%;
   display: flex;
   gap: 8px;
@@ -64,7 +64,7 @@ header {
 .left,
 .center,
 .right {
-    height: 80vh;
+
   background: var(--panel);
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
@@ -80,6 +80,7 @@ header {
 }
 
 .center {
+  height: 98%;
   /*flex: 1.0;*/
   width: 20%;
   /*min-width: 260px;*/
@@ -98,23 +99,25 @@ header {
 ================================ */
 canvas {
   display: block;
-  border-radius: 6px;
   background: #dadada68;
 }
 
 #simCanvas {
-  height: 90%;
+  width: 90%;
+  max-height: 90%;
   aspect-ratio: 1 / 1;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer__smallmuted {
   flex: 1;                     /* 残りを占有 */
-  padding:1% 0 ;
+  padding:0.8% 0 ;
   display: flex;
   align-items: center;          /* 縦中央 */
   justify-content: center;      /* 横中央 */
-  font-size: clamp(12px, 1.5vw, 24px);
+  font-size: clamp(12px, 0.8vw, 24px);
 }
 
 
@@ -124,19 +127,25 @@ canvas {
 .ctrl {
   display: flex;
   flex-direction: column;
+  margin: 2%;
   gap: 6px;
 }
 
 .ctrl label {
   font-weight: 600;
-  font-size: 13px;
+  font-size: 1em;
 }
 
 .row {
   display: flex;
   align-items: center;
   gap: 6px;
-  margin: 5%;
+  margin: 3% 5%;
+}
+
+.Remarks{
+    margin: 0 3%;
+    font-size: 0.8em;
 }
 
 .row input[type=range] {
@@ -144,8 +153,9 @@ canvas {
 }
 
 .row button{
-  width: 10em;
-  margin: 2%;
+  width: 100%;
+  font-size: 1.2em;
+  margin: 3%;
 }
 
 .val {
@@ -176,10 +186,13 @@ button.primary {
    Table
 ================================ */
 .table-wrap {
-
   overflow: auto;
   border: 1px solid #eee;
   border-radius: 6px;
+}
+
+.table-wrap thead th{
+    font-size: 1.2em;
 }
 
 table {
@@ -194,6 +207,7 @@ th, td {
   text-align: center;
   border-left: 1px solid #f0f0f0;
   border-bottom: 1px solid #f0f0f0;
+  font-size: 1.2em;
   
   overflow: hidden;
   text-overflow: ellipsis;
@@ -284,5 +298,6 @@ footer p {
 
   .row button{
   margin: auto;
+  margin-top: 10%;
   }
 }
